adding rajedrapancholi website.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div class="lists">
                     <ul class="nav-links">
                         <li>
-                            <div id="brand">Rajendra</div>
+                            <div id="brand"><a href="http://www.rajendrapancholi.blogspot.com">Rajendra</a></div>
                         </li>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="#home">Home</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Contact Us</a></li>
                         <li><a href="#">About Us</a></li>
@@ -114,7 +114,7 @@ Macromedia HomeSite 5 − HomeSite 5 is a well-liked HTML and JavaScript editor 
 Where is JavaScript Today ?
 The ECMAScript Edition 5 standard will be the first update to be released in over four years. JavaScript 2.0 conforms to Edition 5 of the ECMAScript standard, and the difference between the two is extremely minor.
 
-The specification for JavaScript 2.0 can be found on the following site: http://www.ecmascript.org/
+The specification for JavaScript 2.0 can be found on the following site: http://www.rajendrapancholi.blogspot.com
 
 Today, Netscape's JavaScript and Microsoft's JScript conform to the ECMAScript standard, although both the languages still support the features that are not a part of the standard.
 
@@ -124,7 +124,7 @@ Today, Netscape's JavaScript and Microsoft's JScript conform to the ECMAScript s
 </div>
 <footer>
     <div class="ftr">
-        Copyright © 2023 Rajendra Pancholi
+        Copyright © 2023 <a href="http://www.rajendrapancholi.blogspot.com">Rajendra Pancholi</a>
     </div>
 </footer>
 </body>
