--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="lists">
                     <ul class="nav-links">
                         <li>
-                            <div id="brand"><a href="http://www.rajendrapancholi.blogspot.com">Rajendra</a></div>
+                            <div id="brand"><a href="http://www.rajendrapancholi.blogspot.com" target="_blank">Rajendra</a></div>
                         </li>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#">Services</a></li>
@@ -124,7 +124,7 @@ Today, Netscape's JavaScript and Microsoft's JScript conform to the ECMAScript s
 </div>
 <footer>
     <div class="ftr">
-        Copyright © 2023 <a href="http://www.rajendrapancholi.blogspot.com">Rajendra Pancholi</a>
+        Copyright © 2023 <a href="http://www.rajendrapancholi.blogspot.com" target="_blank">Rajendra Pancholi</a>
     </div>
 </footer>
 </body>
